--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,12 @@ img {
   width: 100%;
 }
 
+a,
+.btn {
+  transition: all 0.3s ease-in-out !important;
+  border-radius: 0;
+}
+
 .landing {
   position: relative;
   background: url("./img/showcase.jpg") no-repeat;
@@ -45,6 +51,12 @@ img {
 
 .form-control::placeholder {
   color: #bbb !important;
+}
+
+.fa,
+.fas,
+.fab {
+  color: #fe7a00 !important;
 }
 
 footer {
